--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Built application files
 *.apk
-*.ap_
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -16,6 +15,7 @@ out/
 # Gradle files
 .gradle/
 build/
+gradle/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -34,11 +34,8 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
 .idea/tasks.xml
-.idea/gradle.xml
 .idea/dictionaries
-.idea/libraries
 
 # Keystore files
 *.jks
@@ -53,3 +50,4 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+.idea/
